update for latest theos

--- a/control
+++ b/control
@@ -1,1 +1,9 @@
-deb/iphoneos-arm/control
+Package: me.jjolano.fmwk.modulous
+Name: Modulous Framework
+Version: 1.0.6
+Architecture: iphoneos-arm
+Description: An iOS developer framework for modular software.
+Maintainer: jjolano
+Author: jjolano
+Section: Development
+Tag: role::developer
