--- a/control
+++ b/control
@@ -1,5 +1,6 @@
 Package: me.jjolano.fmwk.modulous
 Name: Modulous Framework
+Depends: firmware (>= 8.0)
 Version: 1.0.6
 Architecture: iphoneos-arm
 Description: An iOS developer framework for modular software.
