--- a/Examples/ExampleModule.bundle/Makefile
+++ b/Examples/ExampleModule.bundle/Makefile
@@ -7,7 +7,7 @@ BUNDLE_NAME = ExampleModule
 ExampleModule_BUNDLE_EXTENSION = bundle
 ExampleModule_FILES = ExampleModule.m
 ExampleModule_CFLAGS = -fobjc-arc
-ExampleModule_LDFLAGS = -rpath /Library/Frameworks -rpath /var/jb/Library/Frameworks -rpath /usr/lib -rpath /var/jb/usr/lib
+ExampleModule_LDFLAGS = -rpath /Library/Frameworks -rpath /var/jb/Library/Frameworks -rpath @loader_path/.jbroot/Library/Frameworks -rpath /usr/lib -rpath /var/jb/usr/lib -rpath @loader_path/.jbroot/usr/lib
 ExampleModule_INSTALL_PATH = /Library/Modulous/Modules
 
 include $(THEOS_MAKE_PATH)/bundle.mk
